Increment 'develop' version number to 0.2

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,32 @@
 Changelog for SHE_Validation
 
+Changes in v0.2
+=========================
+
+API Changes
+-----------
+
+Dependency Changes
+------------------
+
+Deprecated Features
+-------------------
+
+Bug Fixes
+---------
+
+New Features
+------------
+
+New Config Features
+-------------------
+
+Miscellaneous
+-------------
+
+
+
+
 Changes in v0.1
 =========================
 
