--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 Changelog for SHE_Validation
 
-Changes in v0.2
+Changes in v8.0
 =========================
 
 API Changes
@@ -29,6 +29,7 @@ Miscellaneous
 - CTI-Gal test cases now expressed as Enum
 - CTI-Gal now uses common classes TestInfo, TestCaseInfo, and RequirementInfo
 - CTI-Gal now uses common base classes for writing test results
+- No longer unnecessarily read in image data
 
 
 
