--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,36 @@
 Changelog for SHE_Validation
 
+Changes in v8.3
+=========================
+
+API Changes
+-----------
+
+
+Dependency Changes
+------------------
+
+
+Deprecated Features
+-------------------
+
+
+Bug Fixes
+---------
+
+
+New Features
+------------
+- Added rough script for plotting shear bias error measurements against requirements
+
+New Config Features
+-------------------
+
+
+Miscellaneous
+-------------
+
+
 Changes in v8.0
 =========================
 
