--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,9 @@ Changes in v8.3
 
 API Changes
 -----------
-
+- Added new executable SHE_Validation_ValidatePSFRes
+  - Main executable and interface implemented
+  - Reading in of input data implemented
 
 Dependency Changes
 ------------------
