--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,6 +34,7 @@ New Config Features
 
 Miscellaneous
 -------------
+- Refactored code to move generation of mock data and tables for unit testing to SHE_PPT
 
 
 Changes in v8.0
