--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,6 +38,7 @@ New Config Features
 Miscellaneous
 -------------
 - Refactored code to move generation of mock data and tables for unit testing to SHE_PPT
+- Added documentation for new executable SHE_Validation_ValidatePSFResStarPos
 
 
 Changes in v8.0
