Added note of change to CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,7 @@ API Changes
   - Processing of data implemented
   - Reporting of results to in-memory data product implemented
   - Resulting data product output
+  - Added ability to configure p-value for failure threshold
 
 Dependency Changes
 ------------------
