--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,9 @@ API Changes
   - Reporting of results to in-memory data product implemented
   - Resulting data product output
   - Added ability to configure p-value for failure threshold
+  - Added option for comparison against a reference product. Test will check if provided product is consistent with or
+    better than reference product if one is provided. If one isn't provided, test will check if chi-sq probabilities are
+    consistent with uniform distribution.
 
 Dependency Changes
 ------------------
