--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@ Changes in v9.1
 
 API Changes
 -----------
+- Renamed executable SHE_Validation_ValidatePSFRes to SHE_Validation_ValidatePSFResStarPos, to avoid ambiguity with
+  future PSFResInterp executable
 
 
 Dependency Changes
@@ -23,6 +25,14 @@ Bug Fixes
 
 New Features
 ------------
+- Added new functionality to executable SHE_Validation_ValidatePSFResStarPos
+  - Processing of data implemented
+  - Reporting of results to in-memory data product implemented
+  - Resulting data product output
+  - Added ability to configure p-value for failure threshold
+  - Added option for comparison against a reference product. Test will check if provided product is consistent with or
+    better than reference product if one is provided. If one isn't provided, test will check if chi-sq probabilities are
+    consistent with uniform distribution.
 
 
 New Config Features
@@ -31,6 +41,8 @@ New Config Features
 
 Miscellaneous
 -------------
+- Refactored code to move generation of mock data and tables for unit testing to SHE_PPT
+- Added documentation for new executable SHE_Validation_ValidatePSFResStarPos
 
 
 Changes in v8.3
@@ -38,7 +50,7 @@ Changes in v8.3
 
 API Changes
 -----------
-- Added new executable SHE_Validation_ValidatePSFResStarPos
+- Added new executable SHE_Validation_ValidatePSFRes
   - Main executable and interface implemented
   - Reading in of input data implemented
   - Processing of data implemented
@@ -74,8 +86,6 @@ New Config Features
 
 Miscellaneous
 -------------
-- Refactored code to move generation of mock data and tables for unit testing to SHE_PPT
-- Added documentation for new executable SHE_Validation_ValidatePSFResStarPos
 
 
 Changes in v8.0
