--- a/CHANGELOG
+++ b/CHANGELOG
@@ -34,6 +34,8 @@ New Config Features
 
 Miscellaneous
 -------------
+- Version number is now determined in the code directly from what's in the CMakeLists.txt file, and no longer needs to
+  be maintained separately
 
 
 Changes in v8.0
