Updating doc to reflect addition of new validation test

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,12 @@ API Changes
   - Added option for comparison against a reference product. Test will check if provided product is consistent with or
     better than reference product if one is provided. If one isn't provided, test will check if chi-sq probabilities are
     consistent with uniform distribution.
+- Added new executable SHE_Validation_ValidateDataProc
+  - Main executable and interface implemented
+  - Reading in of input data implemented
+  - Processing of data implemented
+  - Reporting of results to in-memory data product implemented
+  - Resulting data product output
 - Bin limits can now be provided (at the command-line or via pipeline_config file) in the format "auto-N" (where N is a
   positive integer). This will be interpreted as "Automatically generate bin limits from the data, by separating it
   N quantiles (of equal data volume)." The default is now "auto-4" for all parameters, which splits the data into
