--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,8 @@ API Changes
   - Main ~~executable~~ and interface implemented
   - Reading in of input data implemented
   - Processing data implemented
+  - Reporting of results to in-memory data product implemented
+  - Resulting data product output
 - Bin limits can now be provided (at the command-line or via pipeline_config file) in the format "auto-N" (where N is a
   positive integer). This will be interpreted as "Automatically generate bin limits from the data, by separating it
   N quantiles (of equal data volume)." The default is now "auto-4" for all parameters, which splits the data into
